# jrsonnet

./: .dockerignore  .editorconfig  .envrc  .gitignore  .gitlab-ci.yml  .rustfmt.toml  CLAUDE.md  Cargo.toml  Dockerfile  Justfile  LICENSE  Makefile  README.adoc  README.md  clippy.toml  flake.nix  result  rust-toolchain.toml  taplo.toml  tk-compare-grafana.toml  treefmt.nix
bindings/jsonnet/: Cargo.toml  README.adoc  README.md
cmds/jrsonnet/: Cargo.toml
cmds/jrsonnet-deps/: Cargo.toml
cmds/jrsonnet-fmt/: Cargo.toml
cmds/jrsonnet-lsp/: Cargo.toml
cmds/jsonnet/: Cargo.toml
cmds/mock-k8s-server/: Cargo.toml
cmds/rtk/: Cargo.toml  build.rs
cmds/tk-compare/: Cargo.toml
crates/diff/: Cargo.toml
crates/jrsonnet-cli/: Cargo.toml
crates/jrsonnet-evaluator/: Cargo.toml  README.adoc  README.md  build.rs
crates/jrsonnet-formatter/: Cargo.toml
crates/jrsonnet-interner/: Cargo.toml
crates/jrsonnet-ir-parser/: Cargo.toml
crates/jrsonnet-lint/: Cargo.toml
crates/jrsonnet-macros/: Cargo.toml
crates/jrsonnet-parser/: Cargo.toml  README.adoc  README.md  result  result.adoc
crates/jrsonnet-peg-parser/: Cargo.toml
crates/jrsonnet-rowan-parser/: Cargo.toml  jsonnet.ungram
crates/jrsonnet-stdlib/: Cargo.toml  README.md  build.rs  result
crates/jrsonnet-trace/: Cargo.toml
crates/jrsonnet-types/: Cargo.toml
crates/jsonnet-evaluator/: Cargo.toml  README.md  build.rs
crates/jsonnet-parser/: Cargo.toml  README.md
crates/k8s-mock/: Cargo.toml
jrsonnet-lsp/: Cargo.toml
jrsonnet-lsp/src/: main.rs
tests/: .gitignore  Cargo.toml
tests/cpp_test_suite_golden_override/: error.01.jsonnet.golden  error.02.jsonnet.golden  error.03.jsonnet.golden  error.04.jsonnet.golden  error.05.jsonnet.golden  error.06.jsonnet.golden  error.07.jsonnet.golden  error.08.jsonnet.golden  error.args_commafodder.jsonnet.golden  error.array_fractional_index.jsonnet.golden  error.array_index_string.jsonnet.golden  error.array_large_index.jsonnet.golden  error.array_recursive_manifest.jsonnet.golden  error.assert.fail1.jsonnet.golden  error.assert.fail2.jsonnet.golden  error.assert_equal_obj.jsonnet.golden  error.assert_equal_str.jsonnet.golden  error.comprehension_spec_object2.jsonnet.golden  error.computed_field_scope.jsonnet.golden  error.decodeUTF8_float.jsonnet.golden  error.decodeUTF8_nan.jsonnet.golden  error.equality_function.jsonnet.golden  error.field_not_exist.jsonnet.golden  error.format.too_few_values.jsonnet.golden  error.function_duplicate_arg.jsonnet.golden  error.function_infinite_default.jsonnet.golden  error.function_no_default_arg.jsonnet.golden  error.function_too_many_args.jsonnet.golden  error.import_static-check-failure.jsonnet.golden  error.import_syntax-error.jsonnet.golden  error.inside_equals_array.jsonnet.golden  error.inside_equals_object.jsonnet.golden  error.inside_tostring_array.jsonnet.golden  error.inside_tostring_object.jsonnet.golden  error.integer_left_shift.jsonnet.golden  error.integer_left_shift_runtime.jsonnet.golden  error.invariant.avoid_output_change.jsonnet.golden  error.invariant.equality.jsonnet.golden  error.invariant.option.jsonnet.golden  error.invariant.simple.jsonnet.golden  (+49 more)
tests/cpp_test_suite_golden_override_ir_parser/: error.import_syntax-error.jsonnet.golden  error.overflow.jsonnet.golden  error.overflow3.jsonnet.golden  error.parse.array_comma.jsonnet.golden  error.parse.index_unterminated.jsonnet.golden  error.parse.method_plus.jsonnet.golden  error.parse.object_comma.jsonnet.golden  error.parse.object_comprehension_local_clash.jsonnet.golden  error.parse.self_in_computed_field.jsonnet.golden  error.parse.static_error_bad_number.jsonnet.golden  error.parse.string.invalid_escape_unicode_short.jsonnet.golden  error.parse.string.invalid_escape_unicode_short3.jsonnet.golden  error.parse.string.unfinished.jsonnet.golden  error.parse.string.unfinished2.jsonnet.golden  error.parse.string_multi_no_newline.jsonnet.golden  error.parse.text_block_bad_whitespace.jsonnet.golden  error.parse.text_block_eof.jsonnet.golden  error.parse.text_block_not_terminated.jsonnet.golden
tests/go_testdata_golden_override/: array_out_of_bounds.jsonnet.golden  array_out_of_bounds2.jsonnet.golden  array_out_of_bounds3.jsonnet.golden  array_out_of_bounds4.jsonnet.golden  array_plus_bad.jsonnet.golden  arrcomp5.jsonnet.golden  arrcomp_if4.jsonnet.golden  arrcomp_if6.jsonnet.golden  arrcomp_if7.jsonnet.golden  assert3.jsonnet.golden  assert_equal4.jsonnet.golden  assert_equal5.jsonnet.golden  assert_equal6.jsonnet.golden  assert_failed.jsonnet.golden  assert_failed_custom.jsonnet.golden  bad_function_call.jsonnet.golden  bad_function_call2.jsonnet.golden  bad_function_call_and_error.jsonnet.golden  bad_index_array.jsonnet.golden  bad_index_object.jsonnet.golden  bad_index_string.jsonnet.golden  binaryNot2.jsonnet.golden  bitwise_and4.jsonnet.golden  bitwise_or10.jsonnet.golden  bitwise_xor7.jsonnet.golden  builtinBase64DecodeBytes_high_codepoint.jsonnet.golden  builtinBase64DecodeBytes_invalid_base64_data.jsonnet.golden  builtinBase64DecodeBytes_wrong_type.jsonnet.golden  builtinBase64Decode_high_codepoint.jsonnet.golden  builtinBase64Decode_invalid_base64_data.jsonnet.golden  builtinBase64Decode_wrong_type.jsonnet.golden  builtinBase64_invalid_byte_array.jsonnet.golden  builtinBase64_invalid_byte_array1.jsonnet.golden  builtinBase64_invalid_byte_array2.jsonnet.golden  builtinBase64_non_string_non_array.jsonnet.golden  builtinChar3.jsonnet.golden  builtinChar5.jsonnet.golden  builtinChar7.jsonnet.golden  builtinIsEmpty2.jsonnet.golden  builtinObjectFieldsEx_bad.jsonnet.golden  (+159 more)
tests/go_testdata_golden_override_ir_parser/: error_hexnumber.jsonnet.golden  import_syntax_error.jsonnet.golden  object_comp_assert.jsonnet.golden  object_comp_illegal.jsonnet.golden  static_error_eof.jsonnet.golden  syntax_error.jsonnet.golden  unfinished_args.jsonnet.golden
tests/golden/: assert_recursion_allowed.jsonnet  assert_recursion_allowed.jsonnet.golden  builtin_mergePatch.jsonnet  builtin_mergePatch.jsonnet.golden  builtin_strings.jsonnet  (+28 more)
xtask/: Cargo.toml  build.rs
(+1093 files in other folders)
