[workspace]
package.version = "0.5.0-pre95"
package.repository = "https://github.com/CertainLach/jrsonnet"
members = ["crates/*", "bindings/jsonnet", "cmds/*", "tests", "xtask"]
default-members = ["cmds/jrsonnet"]
resolver = "2"

[workspace.dependencies]
jrsonnet-evaluator = { path = "./crates/jrsonnet-evaluator", version = "0.5.0-pre95" }
jrsonnet-macros = { path = "./crates/jrsonnet-macros", version = "0.5.0-pre95" }
jrsonnet-parser = { path = "./crates/jrsonnet-parser", version = "0.5.0-pre95" }
jrsonnet-rowan-parser = { path = "./crates/jrsonnet-rowan-parser", version = "0.5.0-pre95" }
jrsonnet-interner = { path = "./crates/jrsonnet-interner", version = "0.5.0-pre95" }
jrsonnet-stdlib = { path = "./crates/jrsonnet-stdlib", version = "0.5.0-pre95" }
jrsonnet-cli = { path = "./crates/jrsonnet-cli", version = "0.5.0-pre95" }
jrsonnet-types = { path = "./crates/jrsonnet-types", version = "0.5.0-pre95" }

jrsonnet-gcmodule = "0.3.6"
hi-doc = "0.1.0"

serde = "1.0.197"
serde_json = "1.0.114"
serde_yaml_with_quirks = "0.8.24"

anyhow = "1.0.80"
thiserror = "1.0"
mimallocator = "0.1.3"
indoc = "2.0"
dprint-core = "0.65.0"
insta = "1.35"
tempfile = "3.10"
pathdiff = "0.2.1"
hashbrown = "0.14.3"
static_assertions = "1.1"
rustc-hash = "1.1"
bincode = "1.3"
annotate-snippets = "0.10.1"
num-bigint = "0.4.4"
derivative = "2.2.0"
strsim = "0.11.0"
structdump = "0.2.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
peg = "0.8.2"
drop_bomb = "0.1.5"
logos = "0.14.0"
miette = "7.1.0"
rowan = "0.15"
text-size = "1.1"
md5 = "0.7.0"
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"
base64 = "0.21.7"
indexmap = "2.2.3"
itertools = "0.12.1"
ungrammar = "1.16.1"
xshell = "0.2.5"

clap = "4.5"
clap_complete = "4.5"

lsp-server = "0.7.6"
lsp-types = "0.95.0"

regex = "1.10.3"
lru = "0.12.2"

#[profile.test]
#opt-level = 1

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = 0
panic = "abort"
strip = true

[profile.releasedebug]
inherits = "release"
debug = 2
panic = "unwind"
strip = false
