[workspace]
members = ["crates/*", "bindings/jsonnet", "cmds/*", "tests", "xtask"]
default-members = ["cmds/jrsonnet"]
resolver = "2"

[workspace.package]
authors = ["Yaroslav Bolyukin <iam@lach.pw>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/CertainLach/jrsonnet"
version = "0.5.0-pre96"

[workspace.dependencies]
jrsonnet-cli = { path = "./crates/jrsonnet-cli", version = "0.5.0-pre96" }
jrsonnet-evaluator = { path = "./crates/jrsonnet-evaluator", version = "0.5.0-pre96" }
jrsonnet-interner = { path = "./crates/jrsonnet-interner", version = "0.5.0-pre96" }
jrsonnet-macros = { path = "./crates/jrsonnet-macros", version = "0.5.0-pre96" }
jrsonnet-parser = { path = "./crates/jrsonnet-parser", version = "0.5.0-pre96" }
jrsonnet-rowan-parser = { path = "./crates/jrsonnet-rowan-parser", version = "0.5.0-pre96" }
jrsonnet-stdlib = { path = "./crates/jrsonnet-stdlib", version = "0.5.0-pre96" }
jrsonnet-types = { path = "./crates/jrsonnet-types", version = "0.5.0-pre96" }

jrsonnet-gcmodule = "0.3.10"
# Diagnostics.
# hi-doc is my library, which handles text formatting very well, but isn't polished enough yet
# Previous implementation was based on annotate-snippets, which I don't like for many reasons.
#
# I'm against using miette, because I want to reuse data between interpreter and annotations, yet miette
#   and other libraries want to handle spans etc by itself, which is okay for compiler diagnostics, but is
#   bad for interpreter, where interpreter and parser are paired much closer.
hi-doc = "0.1.1"

# CLI
clap = "4.5"
clap_complete = "4.5"

# Parsing, manifestification is implemented manually everywhere
# Note on serde_yaml_with_quirks: This is a fork of serde-yaml with legacy yaml 1.1 support:
# https://github.com/dtolnay/serde-yaml/pull/225
serde = "1.0.197"
serde_json = "1.0.114"
serde_yaml_with_quirks = "0.9.34"

# Error handling
anyhow = "1.0.83"
thiserror = "2.0.3"

# Code formatting
dprint-core = "0.67.4"
dprint-core-macros = "0.1.0"

# Stdlib hashing functions
md5 = "0.7.0"
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"

# Source code parsing.
# Jrsonnet has two parsers for jsonnet - one is for execution, and another is for better parsing diagnostics/lints/LSP.
# First (and fast one) is based on peg, second is based on rowan.
logos = "0.14.0"
peg = "0.8.3"
rowan = "0.16.1"
ungrammar = "1.16.1"

base64 = "0.22.1"
drop_bomb = "0.1.5"
hashbrown = "0.15.2"
indexmap = "2.2.3"
indoc = "2.0"
insta = "1.39"
itertools = "0.13.0"
mimalloc = "0.1.43"
num-bigint = "0.4.5"
pathdiff = "0.2.1"
proc-macro2 = "1.0"
quote = "1.0"
rustc-hash = "2.1.0"
static_assertions = "1.1"
strsim = "0.11.0"
syn = "2.0"
tempfile = "3.10"
xshell = "0.2.6"

lru = "0.12.3"
regex = "1.10"

json-structural-diff = "0.1.0"
syn-dissect-closure = "0.1.0"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
future_incompatible = { level = "deny", priority = -1 }
rust_2024_compatibility = { level = "deny", priority = -1 }
let_underscore = { level = "deny", priority = -1 }

# False-positives
if_let_rescope = "allow"
tail_expr_drop_order = "allow"
edition_2024_expr_fragment_specifier = "allow"

# TODO: add docs everywhere
# missing_doc = "warn"

elided_lifetimes_in_paths = "deny"
explicit_outlives_requirements = "deny"
noop_method_call = "deny"
# single_use_lifetimes = "deny"
variant_size_differences = "deny"
macro_expanded_macro_exports_accessed_by_absolute_paths = "deny"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Too verbose
must_use_candidate = "allow"
# A lot of functions pass around errors thrown by code
missing_errors_doc = "allow"
# A lot of pointers have interior Rc
needless_pass_by_value = "allow"
# Its fine
wildcard_imports = "allow"
enum_glob_use = "allow"
cast_possible_truncation = "allow"
# https://github.com/rust-lang/rust-clippy/issues/8539
iter_with_drain = "allow"
type_repetition_in_bounds = "allow"
# ci is being run with nightly, but library should work on stable
missing_const_for_fn = "allow"
# too many false-positives with .expect() calls
missing_panics_doc = "allow"
# false positives
redundant_pub_crate = "allow"

module_name_repetitions = "deny"

#[profile.test]
#opt-level = 1

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = 0
panic = "abort"
strip = true

[profile.releasedebug]
inherits = "release"
debug = 2
panic = "unwind"
strip = false
