[package]
name = "jrsonnet-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.48"
jrsonnet-evaluator = { path = "../jrsonnet-evaluator" }
jrsonnet-parser = { path = "../jrsonnet-parser" }
lsp-server = "0.5.2"
lsp-types = "0.92.0"
serde = "1.0.130"
serde_json = "1.0.71"
