[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
jrsonnet-evaluator.workspace = true
jrsonnet-gcmodule.workspace = true
jrsonnet-stdlib.workspace = true
json-structural-diff.workspace = true
serde.workspace = true
serde_json.workspace = true

[features]
nightly = []
