[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
indexmap.workspace = true
itertools.workspace = true
proc-macro2.workspace = true
quote.workspace = true
ungrammar.workspace = true
xshell.workspace = true
clap = {workspace = true, features = ["derive"]}
