[package]
name = "libjsonnet"
description = "Rust implementation of libjsonnet.so"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
jrsonnet-evaluator.workspace = true
jrsonnet-parser.workspace = true
jrsonnet-stdlib.workspace = true
jrsonnet-gcmodule.workspace = true

[lib]
name = "jsonnet"
crate-type = ["cdylib"]

[features]
# Export additional functions for native integration, i.e ability to set custom trace format
interop = []
experimental = ["exp-preserve-order", "exp-destruct"]
exp-preserve-order = ["jrsonnet-evaluator/exp-preserve-order"]
exp-destruct = ["jrsonnet-evaluator/exp-destruct"]
