# NOTE: This library may panic, and it is only safe to panic in FFI contexts when library is built in panic="abort" mode,
# which is set for release builds of this library.
# FIXME: Move this warning somewhere else, or remove panics from this library (It is not always possible, in some cases
# there is nothing to report the error, in those cases use `abort()`)
# NOTE: This library assumes the allocator is libc malloc or alternative, which does track allocation size for user,
# see TODO in `jsonnet_realloc`.

[package]
name = "libjsonnet"
description = "Rust implementation of libjsonnet.so"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
jrsonnet-evaluator.workspace = true
jrsonnet-parser.workspace = true
jrsonnet-stdlib.workspace = true
jrsonnet-gcmodule.workspace = true
jrsonnet-interner.workspace = true

[lib]
name = "jsonnet"
crate-type = ["cdylib", "staticlib"]

[features]
default = ["interop-common", "interop-threading"]
# Export additional functions for native integration, i.e ability to set custom trace format
interop-common = []
# Provide ability to statically override callbacks from WASM (by using imports)
interop-wasm = []
# Provide ability to move jsonnet vm state between threads
interop-threading = []

experimental = ["exp-preserve-order", "exp-destruct"]
exp-preserve-order = ["jrsonnet-evaluator/exp-preserve-order"]
exp-destruct = ["jrsonnet-evaluator/exp-destruct"]
