[package]
name = "jrsonnet-fmt"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
dprint-core.workspace = true
jrsonnet-rowan-parser.workspace = true
insta.workspace = true
indoc.workspace = true
hi-doc.workspace = true
clap = { workspace = true, features = ["derive"] }
tempfile.workspace = true
thiserror.workspace = true
