[package]
name = "jrsonnet-fmt"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
dprint-core.workspace = true
dprint-core-macros.workspace = true
hi-doc.workspace = true
indoc.workspace = true
insta.workspace = true
jrsonnet-rowan-parser.workspace = true
tempfile.workspace = true
thiserror.workspace = true
