[package]
name = "mock-k8s-server"
version = "0.1.0"
edition = "2021"
description = "Standalone mock Kubernetes API server for testing and benchmarking"

[[bin]]
name = "mock-k8s-server"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
k8s-mock = { path = "../../crates/k8s-mock" }
k8s-openapi = { version = "0.27.0", features = ["v1_31"] }
kube = { version = "3.0.0", features = ["client"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "signal", "fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
anyhow = "1.0"
nix = { version = "0.29", features = ["signal", "process"] }
