[package]
name = "rtk"
version = "0.1.0"
edition = "2021"

[lib]
name = "rtk"
path = "src/lib.rs"

[[bin]]
name = "rtk"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-logfmt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-saphyr.workspace = true
serde_yaml_with_quirks.workspace = true
tabwriter = "1.4"
rayon = "1.10"
walkdir = "2.5"
gtmpl = "0.7.1"
regex = "1.10"
sha2 = "0.10"

# jrsonnet dependencies for evaluation
jrsonnet-evaluator = { path = "../../crates/jrsonnet-evaluator" }
jrsonnet-stdlib = { path = "../../crates/jrsonnet-stdlib" }
jrsonnet-parser = { path = "../../crates/jrsonnet-parser" }
jrsonnet-gcmodule = { version = "0.3.7" }

[dev-dependencies]
tempfile = "3.10"
similar = "2.6"
assert_matches = "1.5.0"
rstest = "0.26.1"
indoc.workspace = true
