[package]
name = "rtk"
version = "0.1.0"
edition = "2021"

[lib]
name = "rtk"
path = "src/lib.rs"

[[bin]]
name = "rtk"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-saphyr.workspace = true
serde_yaml_with_quirks.workspace = true
tabwriter = "1.4"
rayon = "1.10"
walkdir = "2.5"
gtmpl = "0.7.1"
regex = "1.10"
sha2 = "0.10"

# jrsonnet dependencies for evaluation
jrsonnet-evaluator.workspace = true
jrsonnet-stdlib.workspace = true
jrsonnet-parser.workspace = true
jrsonnet-macros.workspace = true
jrsonnet-gcmodule.workspace = true

# Kubernetes client for diff command
kube = { version = "3.0.0", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.27.0", features = ["v1_31"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
similar = "2.6"
syntect = { version = "5.2.0", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "regex-fancy"] }
nu-ansi-term = "0.50.3"
bon = "3.8.2"

# Telemetry
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
thiserror.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
mimallocator = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.10"
assert_matches = "1.5.0"
rstest = "0.26.1"
indoc.workspace = true
patch = "0.7"
tower-test = "0.4.0"
http = "1.4.0"
http-body-util = "0.1.3"
hyper = "1.8.1"
bytes = "1.11.0"
serde_yaml = "0.9.34"
paste = "1.0.15"
urlencoding = "2.1.3"
k8s-mock = { path = "../../crates/k8s-mock" }

[features]
default = ["mimalloc"]
# Use mimalloc as allocator (enabled by default, Linux only)
mimalloc = ["mimallocator"]
# Use the system allocator instead of mimalloc
system-alloc = []
