[package]
name = "tk-compare"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tk-compare"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
colored = "2.1"
regex = "1.10"
serde_yaml = "0.9.34"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
rtk-diff = { path = "../../crates/diff" }
k8s-mock = { version = "0.1.0", path = "../../crates/k8s-mock" }
k8s-openapi = { version = "0.27.0", features = ["v1_31"] }
bon = "3.8.2"
which = "8.0.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
tracing = "0.1.44"
globset = "0.4.16"
indicatif = "0.17.11"

[dev-dependencies]
indoc = "2.0"
rstest = "0.26.1"
tempfile = "3.21"
