[package]
name = "jrsonnet-cli"
description = "Utilities for building jrsonnet CLIs"
version.workspace = true
authors = ["Yaroslav Bolyukin <iam@lach.pw>"]
license = "MIT"
edition = "2021"

[features]
exp-preserve-order = [
    "jrsonnet-evaluator/exp-preserve-order",
    "jrsonnet-stdlib/exp-preserve-order",
]
exp-bigint = [
    "jrsonnet-evaluator/exp-bigint",
    "jrsonnet-stdlib/exp-bigint",
]
legacy-this-file = ["jrsonnet-stdlib/legacy-this-file"]

[dependencies]
jrsonnet-evaluator = { workspace = true, features = ["explaining-traces"] }
jrsonnet-parser.workspace = true
jrsonnet-stdlib.workspace = true
jrsonnet-gcmodule.workspace = true

clap = { version = "4.1", features = ["derive"] }
