[package]
name = "jrsonnet-evaluator"
description = "jsonnet interpreter"
version.workspace = true
repository.workspace = true
authors = ["Yaroslav Bolyukin <iam@lach.pw>"]
license = "MIT"
edition = "2021"

[features]
default = ["explaining-traces"]
# Rustc-like trace visualization
explaining-traces = ["annotate-snippets"]
# Allows library authors to throw custom errors
anyhow-error = ["anyhow"]
# Adds ability to build import closure in async
async-import = []

# Allows to preserve field order in objects
exp-preserve-order = []
# Implements field destructuring
exp-destruct = ["jrsonnet-parser/exp-destruct"]
# Iteration over objects yields [key, value] elements
exp-object-iteration = []
# Bigint type
exp-bigint = ["num-bigint", "jrsonnet-types/exp-bigint"]
# obj?.field, obj?.['field']
exp-null-coaelse = ["jrsonnet-parser/exp-null-coaelse"]

# Improves performance, and implements some useful things using nightly-only features
nightly = ["hashbrown/nightly"]

[dependencies]
jrsonnet-interner.workspace = true
jrsonnet-parser.workspace = true
jrsonnet-types.workspace = true
jrsonnet-macros.workspace = true
jrsonnet-gcmodule.workspace = true

pathdiff.workspace = true
hashbrown.workspace = true
static_assertions.workspace = true

rustc-hash.workspace = true

thiserror.workspace = true
# Friendly errors
strsim.workspace = true

serde.workspace = true

anyhow = { workspace = true, optional = true }
# Serialized stdlib
bincode = { workspace = true, optional = true }
# Explaining traces
annotate-snippets = { workspace = true, optional = true }
# Bigint
num-bigint = { workspace = true, features = ["serde"], optional = true }
derivative.workspace = true
