[package]
name = "jrsonnet-evaluator"
description = "jsonnet interpreter"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

build = "build.rs"

[lints]
workspace = true

[features]
default = ["explaining-traces", "ir-parser"]
# Rustc-like trace visualization
explaining-traces = ["annotate-snippets", "hi-doc"]
# Allows library authors to throw custom errors
anyhow-error = ["anyhow"]
# Use hand-written recursive descent parser instead of PEG parser
ir-parser = ["dep:jrsonnet-ir-parser"]

# Allows to preserve field order in objects
exp-preserve-order = []
# Implements field destructuring
exp-destruct = ["jrsonnet-peg-parser/exp-destruct"]
# Iteration over objects yields [key, value] elements
exp-object-iteration = []
# Bigint type
exp-bigint = ["num-bigint", "jrsonnet-types/exp-bigint"]
# obj?.field, obj?.['field']
exp-null-coaelse = ["jrsonnet-peg-parser/exp-null-coaelse", "jrsonnet-ir-parser?/exp-null-coaelse"]

[dependencies]
jrsonnet-interner.workspace = true
jrsonnet-ir.workspace = true
jrsonnet-peg-parser.workspace = true
jrsonnet-ir-parser = { workspace = true, optional = true }
jrsonnet-types.workspace = true
jrsonnet-macros.workspace = true
jrsonnet-gcmodule.workspace = true

pathdiff.workspace = true
static_assertions.workspace = true

rustc-hash.workspace = true

thiserror.workspace = true
# Friendly errors
strsim.workspace = true

serde.workspace = true

anyhow = { workspace = true, optional = true }
# Explaining traces
annotate-snippets = { workspace = true, optional = true }
# Better explaining traces
hi-doc = { workspace = true, optional = true }
# Bigint
num-bigint = { workspace = true, features = ["serde"], optional = true }

stacker = "0.1.23"
educe = { version = "0.6.0", default-features = false, features = ["Clone", "Debug", "Eq", "Hash", "PartialEq"] }

[build-dependencies]
rustversion = "1.0.22"
