[package]
name = "jrsonnet-formatter"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
dprint-core.workspace = true
hi-doc.workspace = true
indoc.workspace = true
insta.workspace = true
jrsonnet-lexer = { version = "0.5.0-pre97", path = "../jrsonnet-lexer" }
jrsonnet-rowan-parser.workspace = true

[lints]
workspace = true
