[package]
name = "jrsonnet-interner"
description = "Jrsonnet string interning"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
default = []
# Implement value serialization using structdump
structdump = ["dep:structdump"]
# Implement value serialization using serde
#
# Warning: serialized values won't be deduplicated
serde = ["dep:serde"]

[dependencies]
jrsonnet-gcmodule.workspace = true

serde = { workspace = true, optional = true }
structdump = { workspace = true, optional = true }

rustc-hash.workspace = true
hashbrown = { workspace = true, features = ["inline-more"] }
