[package]
name = "jrsonnet-interner"
description = "Jrsonnet string interning"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
jrsonnet-gcmodule.workspace = true

hashbrown = { workspace = true }
rustc-hash.workspace = true
