[package]
name = "jrsonnet-ir-parser"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
insta.workspace = true
jrsonnet-gcmodule.workspace = true
jrsonnet-ir.workspace = true
jrsonnet-lexer = { version = "0.5.0-pre97", path = "../jrsonnet-lexer" }

[lints]
workspace = true
