[package]
name = "jrsonnet-ir-parser"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
exp-null-coaelse = ["jrsonnet-ir/exp-null-coaelse"]

[dependencies]
insta.workspace = true
jrsonnet-gcmodule.workspace = true
jrsonnet-ir.workspace = true
jrsonnet-lexer = { version = "0.5.0-pre97", path = "../jrsonnet-lexer" }

[lints]
workspace = true
